--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "vee-validate": "^2.0.3",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
     "vue-resource": "^1.3.5",
