--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "google-maps": "^3.2.1",
     "vee-validate": "^2.0.3",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
