--- a/package.json
+++ b/package.json
@@ -15,38 +15,41 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "google-maps": "^3.2.1",
-    "vee-validate": "^2.0.3",
+    "vee-validate": "^2.0.4",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
-    "vue-resource": "^1.3.5",
+    "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.17.6",
+    "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.5",
+    "autoprefixer": "^7.2.6",
     "babel-core": "^6.26.0",
-    "sw-precache-webpack-plugin": "^0.11.4",
     "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chalk": "^2.1.0",
+    "chai": "^4.1.2",
+    "chalk": "^2.3.1",
+    "chromedriver": "^2.33.1",
     "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.1.1",
+    "copy-webpack-plugin": "^4.4.1",
+    "cross-env": "^5.0.5",
+    "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.9",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "cross-env": "^5.0.5",
+    "inject-loader": "^3.0.1",
     "karma": "^1.7.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -57,31 +60,28 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.5",
     "mocha": "^4.0.1",
-    "chai": "^4.1.2",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0",
-    "inject-loader": "^3.0.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "phantomjs-prebuilt": "^2.1.15",
-    "chromedriver": "^2.33.1",
-    "cross-spawn": "^5.1.0",
     "nightwatch": "^0.9.16",
-    "selenium-server": "^3.6.0",
-    "semver": "^5.4.1",
-    "shelljs": "^0.7.8",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.15",
     "rimraf": "^2.6.2",
+    "selenium-server": "^3.9.1",
+    "semver": "^5.4.1",
+    "shelljs": "^0.7.8",
+    "sinon": "^4.3.0",
+    "sinon-chai": "^2.14.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "uglify-es": "^3.3.10",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0",
-    "uglify-es": "^3.1.3"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
