--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "google-maps": "^3.2.1",
+    "portal-vue": "^1.3.0",
     "vee-validate": "^2.0.4",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
