--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "@mdi/font": "^2.3.54",
     "base-64": "^0.1.0",
     "google-maps": "^3.2.1",
     "portal-vue": "^1.3.0",
     "vee-validate": "^2.0.4",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
+    "vue-material-design-icons": "^1.4.0",
     "vue-resource": "^1.4.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.3",
