--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "portal-vue": "^1.3.0",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
+    "vue-lodash": "^2.0.0",
     "vue-ls": "^2.4.1",
     "vue-material-design-icons": "^1.4.0",
     "vue-resource": "^1.5.0",
