--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-maps": "^3.3.0",
     "moment": "^2.22.1",
     "portal-vue": "^1.3.0",
+    "v-viewer": "^1.0.1",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
     "vue-lodash": "^2.0.0",
