--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-lodash": "^2.0.0",
     "vue-ls": "^2.4.1",
     "vue-material-design-icons": "^1.4.0",
+    "vue-paypal-checkout": "^3.1.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.17",
