--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "base-64": "^0.1.0",
     "google-maps": "^3.3.0",
     "moment": "^2.22.1",
+    "moment-random": "^1.0.3",
     "portal-vue": "^1.3.0",
     "v-viewer": "^1.0.1",
     "vee-validate": "^2.0.9",
