--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.6.0",
-    "vuetify": "^1.0.17",
+    "vuetify": "^1.0.19",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
   },
@@ -102,5 +102,19 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/valentinlourteau/atypikhouse2.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/valentinlourteau/atypikhouse2/issues"
+  },
+  "homepage": "https://github.com/valentinlourteau/atypikhouse2#readme",
+  "keywords": []
 }
