--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "v-viewer": "^1.0.1",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
+    "vue-agile": "^0.3.7",
     "vue-hotel-datepicker": "^2.2.1",
     "vue-lodash": "^2.0.0",
     "vue-ls": "^2.4.1",
