--- a/static/manifest.json
+++ b/static/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#ffeb3b"
+  "theme_color": "#e3f2fd"
 }
