--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
+    "prerender-spa-plugin": "^3.2.1",
     "rimraf": "^2.6.2",
     "selenium-server": "^3.12.0",
     "semver": "^5.4.1",
