--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,15 +6,10 @@
       "src": "/static/img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
-    },
-    {
-      "src": "/static/img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
     }
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#e3f2fd"
+  "background_color": "#ffeb3b",
+  "theme_color": "#2196F3"
 }
