--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,13 +3,18 @@
 	  "short_name": "AtypikHouse",
 	  "icons": [
 	    {
-	      "src": "/static/img/icons/android-chrome-192x192.png",
+	      "src": "/static/img/icons/logo.png",
 	      "sizes": "192x192",
+	      "type": "image/png"
+			},
+	    {
+	      "src": "/static/img/icons/logo-huge.png",
+	      "sizes": "512x512",
 	      "type": "image/png"
 	    }
 	  ],
-	  "start_url": "/index.html",
-	  "display": "standalone",
+	  "start_url": "/",
+	  "display": "fullscreen",
 	  "background_color": "#ffeb3b",
 	  "theme_color": "#2196F3"
 	}
