--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e"
+    
   },
   "dependencies": {
     "@mdi/font": "^2.3.54",
     "base-64": "^0.1.0",
     "eslint": "^4.19.1",
-    "google-maps": "^3.3.0",
+    "google-maps": "^3.2.1",
     "moment": "^2.22.1",
     "moment-random": "^1.0.3",
+    "payload": "^1.0.3",
+    "phantomjs": "^2.1.7",
     "portal-vue": "^1.3.0",
+    "selenium-webdriver": "^4.0.0-alpha.5",
     "v-viewer": "^1.0.1",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
@@ -49,7 +53,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chalk": "^2.4.1",
-    "chromedriver": "^2.38.3",
+    "chromedriver": "^2.46.0",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.5",
@@ -122,3 +126,4 @@
   "homepage": "https://github.com/valentinlourteau/atypikhouse2#readme",
   "keywords": []
 }
+
